<resources>
    <string name="app_name">Eva</string>
    <string name="dashboard_label">Dashboard</string>
    <string name="create_page_title">Create New Event</string>
    <string name="input_event_name_label">Event Name</string>
    <string name="input_organizer_hint">Organizer</string>
    <string name="input_organizer_helper">Fill the name the organizer</string>
    <string name="input_event_name_helper">Fill the event name</string>
    <string name="input_date_hint">Date</string>
    <string name="input_date_helper">Specify date of the event</string>
    <string name="open_calendar">Open Calendar</string>
    <string name="rb_paid_label">Paid</string>
    <string name="rb_free_button">Free</string>
    <string name="event_type_label">Type of Event</string>
    <string name="input_place_hint">Place</string>
    <string name="input_place_helper">Specify place of the event</string>
    <string name="input_description_hint">Description</string>
    <string name="input_description_helper">Explain your event here</string>
    <string name="save_menu">Save</string>
    <string name="preview_image">Preview Image</string>
    <string name="upload_image">Upload Image</string>
    <string name="input_price_hint">Price</string>
    <string name="input_price_helper">Fill with 0 if the event is free</string>
    <string name="event_image">Event Image</string>
    <string name="list_events_label">List Events</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="register_label">Sign up</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="already_have_account">Already have account</string>
    <string name="profile">User Profile</string>
    <string name="save_profile">Save Profile</string>
    <string name="profile_menu">Profile</string>
    <string name="input_username_hint">Input your username</string>
    <string name="display_name">Display Name</string>
    <string name="dummy_greeting">Welcome Aditya</string>
    <string name="greeting">Welcome %1$s</string>
    <string name="anonym_greeting">Login first!</string>
    <string name="event_poster_image">Event Poster Image</string>
    <string name="test">TEST!</string>
    <string name="detail_description_label">Description</string>
    <string name="detail_label">Detail</string>
    <string name="organizer_column">Organizer</string>
    <string name="date_column">Date</string>
    <string name="place_column">Place</string>
    <string name="ticket_price_column">Ticket Price</string>
    <string name="buy_ticket_button">Buy Ticket</string>
    <string name="event_name_text">Event Name</string>
    <string name="free_paid_dummy">Free</string>
    <string name="price_free">FREE</string>
    <string name="price_paid">IDR %s</string>
    <string name="checkout">Checkout</string>
    <string name="checkout_illustration">Checkout Illustration</string>
    <string name="event_name_column">Event Name</string>
    <string name="dummy_e_name">AEJ TechFest 4.0</string>
    <string name="customer_name">Buyer Name</string>
    <string name="dummy_customer_name">Aditya Rohman</string>
    <string name="tickets">Tickets</string>
    <string name="dummy_ticket_number">1 Ticket</string>
    <string name="price">Price</string>
    <string name="dummy_ticket_price">IDR 150000</string>
    <string name="ticket_price_text">IDR %s</string>
    <string name="summary_checkout">Summary Checkout</string>
    <string name="confirm_button_text">Confirm</string>
    <string name="register_successful">Register Successful</string>
    <string name="my_ticket">My Ticket</string>
    <string name="my_ticket_title">My Ticket</string>
    <string name="dummy_buyer_name">Aditya Rohman</string>
    <string name="dummy_event_ticket_name">AEJ TechFest 4.0</string>
    <string name="my_event">My Event</string>
</resources>
