<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".ui.profile.ProfileActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/profile_page_app_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:elevation="0dp">

            <TextView
                android:id="@+id/profile_page_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/profile"
                android:textColor="@color/textColor"
                android:textSize="@dimen/textSize" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:id="@+id/user_profile_image_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_bar_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/big_margin">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_profile_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:src="@drawable/no_profile" />

        <ProgressBar
            android:id="@+id/profile_upload_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />
    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_display_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_profile_image_container"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginVertical="@dimen/extra_margin"
        android:hint="@string/display_name"
        app:boxBackgroundColor="@color/colorPrimary"
        app:boxStrokeColor="@color/secondaryColorAccent"
        app:boxStrokeWidth="2dp"
        app:counterEnabled="true"
        app:counterMaxLength="50"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:helperText="@string/input_username_hint"
        app:helperTextEnabled="true"
        app:hintTextColor="@color/secondaryColorAccent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/display_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_save_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:backgroundTint="@color/secondaryColorAccent"
        android:fontFamily="@font/roboto_medium"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/save_profile"
        android:textColor="@color/textColor"
        android:textSize="@dimen/textSize" />
</RelativeLayout>